--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
 <h2>HELO</h2> 
 <p2>pppppppp</p2>
-<<<<<<< Updated upstream
-<h3>fgsfg</h3>
-=======
-<<<<<<< HEAD
-<h4>fsgbfg</h4>
-=======
-<h3>fgsfg</h3>
->>>>>>> 5328933aa0142ff62420d7fe8dc37fbfbe9f3ccb
-
->>>>>>> Stashed changes
+<h3>fgfsdg</h3>
